Some code cleanup and updated README.md.

--- a/sample.ini
+++ b/sample.ini
@@ -4,10 +4,8 @@
 output_dir = '/tmp/fetchbags';
 
 ; Your site's base URL.
-site_base_url = 'http://digital.lib.sfu.ca';
+islandora_base_url = 'http://digital.lib.sfu.ca';
 
-; The namespace of the objects you want to generate Bags for.
-namespace ='hiv';
-
-; Set to 1000000 or some ridiculously high number unless you want a subset.
-limit = '10';
+; Solr query used to retrieve the PIDs of objects you want to create Bags for.
+; This one queries for objects whose namespace is 'hiv', with a limit of 20.
+solr_query = "PID:hiv\:*?fl=PID&rows=20"
