--- a/sample.ini
+++ b/sample.ini
@@ -1,11 +1,20 @@
 ; Sample .ini file for the Islandora Fetch Bags tool
 
+[general]
 ; Where you want your Bags to be saved. Must exist.
 output_dir = '/tmp/fetchbags';
 
 ; Your site's base URL.
 islandora_base_url = 'http://digital.lib.sfu.ca';
 
-; Solr query used to retrieve the PIDs of objects you want to create Bags for.
-; This one queries for objects whose namespace is 'hiv', with a limit of 20.
+[objects]
+; Solr query used to retrieve the PIDs of objects you want to create Bags for. The one
+; in this sample queries for objects whose namespace is 'hiv', with a limit of 20.
+; If you want to retrieve _all_ the PIDs possible, set the 'rows' parameter to
+: a ridiculously high value like 1000000.
 solr_query = "PID:hiv\:*?fl=PID&rows=20"
+
+[bag-info]
+; Tags defined in this section are added to the bag-info.txt file in each Bag.
+tags[] = 'Contact-Email:bag-creators@sfu.ca'
+tags[] = 'Source-Organization:Simon Fraser University Library'
