Added ability to read PIDs from a file.

--- a/sample.ini
+++ b/sample.ini
@@ -13,11 +13,16 @@ temp_dir = '/tmp/fetchbags';
 islandora_base_url = 'http://digital.lib.sfu.ca';
 
 [objects]
-; Solr query used to retrieve the PIDs of objects you want to create Bags for. The one
-; in this sample queries for objects whose namespace is 'hiv', with a limit of 20.
+; 'solr_query' is used to retrieve the PIDs of objects you want to create Bags for. The
+; one in this sample queries for objects whose namespace is 'hiv', with a limit of 20.
 ; If you want to retrieve _all_ the PIDs possible, set the 'rows' parameter to
-: a ridiculously high value like 1000000.
+; a ridiculously high value like 1000000.
 solr_query = "PID:hiv\:*?fl=PID&rows=20"
+
+; 'pid_file' is the full path to to a file listing one PID per row. // and # can
+; be used to comment out lines. Note that 'pid_file' and 'solr_query' are
+; mutually exclusive.
+; pid_file = "/tmp/create_bags_for_these_pids.txt'
 
 [bag-info]
 ; Tags defined in this section are added to the bag-info.txt file in each Bag.
