Added fuller example plugins; updated README.md.

--- a/sample.ini
+++ b/sample.ini
@@ -28,6 +28,10 @@ solr_query = "PID:hiv\:*?fl=PID&rows=20"
 ; Type of compression to use on the Bag. Can be 'tgz', 'zip', or 'none'. Defaults to 'tgz'.
 ; compression = none
 
+; Plugins are PHP classes that modify the Bag. See below for more information.
+; plugins[] = BasicCustomBag
+; plugins[] = AdvancedCustomBag
+
 ; URLs added to the 'fetch[]' setting will be added to the Bag's fetch.txt file.
 ; fetch[] = "http://example.com/termsofuse.htm"
 ; fetch[] = "http://example.com/contact.htm"
