Added AddCommonTags plugin; updated README.md.

--- a/sample.ini
+++ b/sample.ini
@@ -31,19 +31,17 @@ solr_query = "PID:hiv\:*?fl=PID&rows=20"
 ; Type of compression to use on the Bag. Can be 'tgz', 'zip', or 'none'. Defaults to 'tgz'.
 ; compression = none
 
-; Plugins are PHP code that modify the Bag. See the README's "Plugins" section for more info.
-; plugins[] = BasicCustomBag
-; plugins[] = AdvancedCustomBag
+; See the README's "Plugins" section for more info.
+plugins[] = AddCommonTags
+; plugins[] = AddObjectProperties
 
 ; URLs added to the 'fetch[]' setting will be added to the Bag's fetch.txt file.
 ; fetch[] = "http://example.com/termsofuse.htm"
 ; fetch[] = "http://example.com/contact.htm"
 
 [bag-info]
-; Tags defined in this section are added to the bag-info.txt file in each Bag.
-; Two tags are always added: Internal-Sender-Identifier and Bagging-Date. The first
-; is assigned the object's URL and the second is assigned the current date, e.g.:
-; Internal-Sender-Identifier: http://digital.lib.sfu.ca/islandora/object/hiv:26
-; Bagging-Date : 2017-07-19
+; Tags defined in this section are added to the bag-info.txt file in each Bag. Values must
+; be literal strings. If you want to generate values based on properties of the object, you
+; will need to write a plugin.
 tags[] = 'Contact-Email:bag-creators@sfu.ca'
 tags[] = 'Source-Organization:Simon Fraser University Library'
