Added AddChildrenPids plugin; updated README.md.

--- a/sample.ini
+++ b/sample.ini
@@ -25,7 +25,7 @@ solr_query = "PID:hiv\:*?fl=PID&rows=20"
 ; Use 'pid_file' if you have a specific list of PIDs. The 'pid_file' setting defines
 ; the full path to a file listing the PIDs, one PID per row. // and # can be used to
 ; comment out lines.
-; pid_file = "/tmp/create_bags_for_these_pids.txt'
+; pid_file = '/tmp/create_bags_for_these_pids.txt'
 
 [bag]
 ; Type of compression to use on the Bag. Can be 'tgz', 'zip', or 'none'. Defaults to 'tgz'.
