--- a/sample.ini
+++ b/sample.ini
@@ -12,6 +12,9 @@ output_dir = '/tmp/bags'
 ; (and not '/tmp') since its contents are deleted after Bags are created.
 temp_dir = '/tmp/tmpbags';
 
+; Path to log file. Defaults to 'fetch_bags.log' in the same directory as 'fetch.php'.
+; path_to_log = "/path/to/log.txt'
+
 [objects]
 ; You can select which objects to create Bags for in two ways, 1) a Solr query or
 ; 2) a list of PIDs. Note that these two options are mutually exclusive.
